compiler/src/test/resources/amyc/parser/failing/FunDefError6.amy
module FunDef
  fn foo(i: Int j: Int): Int = { 42 }
end FunDef
